--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
         </ul>
     </div>
 
-
+<div class="footer">
+        <p class="blacktext">
+          Made with lots of ❤️.
+      </p>
+    </div>
 
 </body>
 
