style sheet asset

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
     <!-- <header>New York Times Search</header> -->
 
+    <div class="header">
+        
+        <h1>NY Times Form</h1> 
+        <div>
+
     <div class="card container" style="width: 18rem;">
         <div class="card-header">
             Featured
@@ -57,7 +62,11 @@
         </ul>
     </div>
 
-
+    <div class="footer">
+        <p class="blacktext">
+          Made with lots of ❤️.
+      </p>
+    </div>
 
 </body>
 
