--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- <header>New York Times Search</header> -->
 
-    <div class="card container" style="width: 18rem;">
+    <div class="card container">
         <div class="card-header">
             Featured
         </div>
@@ -48,7 +48,7 @@
         </ul>
     </div>
 
-    <div class="card container-fluid" style="width: 18rem;">
+    <div class="card container-fluid">
         <div class="card-header">
             Featured
         </div>
