--- a/index.html
+++ b/index.html
@@ -6,28 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <title>Document</title>
+
+        <link rel="stylesheet" href="assets/style.css">
+
+    <title>NY Times Form</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-            <img src="/docs/4.5/assets/brand/bootstrap-solid.svg" width="30" height="30"
-                class="d-inline-block align-top" alt="" loading="lazy">
-            Bootstrap
-        </a>
-    </nav>
-
+   
     <!-- <header>New York Times Search</header> -->
 
     <div class="header">
         
-        <h1>NY Times Form</h1> 
-        <div>
-
-    <div class="card container" style="width: 18rem;">
+        <h1>New York Times Search</h1> 
+    </div>
+<br></br>
+    <div class="card container" style="width: 38rem;">
         <div class="card-header">
-            Featured
+            Search Parameters
         </div>
         <ul class="list-group list-group-flush">
             <li class="list-group-item">
@@ -52,8 +48,8 @@
             </li>
         </ul>
     </div>
-
-    <div class="card container-fluid" style="width: 18rem;">
+    </br>
+    <div class="card container-fluid" style="width: 38rem;">
         <div class="card-header">
             Featured
         </div>
@@ -61,9 +57,10 @@
             <li class="list-group-item"></li>
         </ul>
     </div>
-
-    <div class="footer">
-        <p class="blacktext">
+</br>
+    <div class="container-fluid" style="width: 40rem;">
+        <div class="footer">
+            <p class="blacktext">
           Made with lots of ❤️.
       </p>
     </div>
