--- a/index.html
+++ b/index.html
@@ -7,79 +7,77 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-        <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="./assets/CSS/style.css">
 
     <title>NY Times Form</title>
 </head>
 
 <body>
-<<<<<<< HEAD
-   
-    <!-- <header>New York Times Search</header> -->
-=======
->>>>>>> 2468d5505d983d9dfdb75fac405aefc860597def
+    <<<<<<< HEAD <!-- <header>New York Times Search</header> -->
+        =======
+        >>>>>>> 2468d5505d983d9dfdb75fac405aefc860597def
 
-    <div class="card container-fluid">
-    <div class="header">
-        
-<<<<<<< HEAD
-        <h1>New York Times Search</h1> 
-    </div>
-<br></br>
-    <div class="card container" style="width: 38rem;">
-=======
-        <h1>NY Times Form</h1> 
-        <div>
+        <div class="card container-fluid">
+            <div class="header">
 
-    <div class="card container-fluid">
->>>>>>> 2468d5505d983d9dfdb75fac405aefc860597def
-        <div class="card-header">
-            Search Parameters
-        </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-                <form>
-                    <div class="form-group">
-                        <label for="formGroupExampleInput">Example label1</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
-                    </div>
-                    <div class="form-group">
-                        <label for="formGroupExampleInput2">Example label2</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
-                    </div>
-                    <div class="form-group">
-                        <label for="formGroupExampleInput2">Example label2</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
-                    </div>
-                    <div class="form-group">
-                        <label for="formGroupExampleInput2">Example label2</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
-                    </div>
-                </form>
-            </li>
-        </ul>
-    </div>
-<<<<<<< HEAD
-    </br>
-    <div class="card container-fluid" style="width: 38rem;">
-=======
+                <<<<<<< HEAD <h1>New York Times Search</h1>
+            </div>
+            <br></br>
+            <div class="card container" style="width: 38rem;">
+                =======
+                <h1>NY Times Form</h1>
+                <div>
 
-    <div class="card container-fluid">
->>>>>>> 2468d5505d983d9dfdb75fac405aefc860597def
-        <div class="card-header">
-            Featured
-        </div>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item"></li>
-        </ul>
-    </div>
-</br>
-    <div class="container-fluid" style="width: 40rem;">
-        <div class="footer">
-            <p class="blacktext">
-          Made with lots of ❤️.
-      </p>
-    </div>
+                    <div class="card container-fluid">
+                        >>>>>>> 2468d5505d983d9dfdb75fac405aefc860597def
+                        <div class="card-header">
+                            Search Parameters
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">
+                                <form>
+                                    <div class="form-group">
+                                        <label for="formGroupExampleInput">Example label1</label>
+                                        <input type="text" class="form-control" id="formGroupExampleInput"
+                                            placeholder="Example input">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="formGroupExampleInput2">Example label2</label>
+                                        <input type="text" class="form-control" id="formGroupExampleInput2"
+                                            placeholder="Another input">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="formGroupExampleInput2">Example label2</label>
+                                        <input type="text" class="form-control" id="formGroupExampleInput2"
+                                            placeholder="Another input">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="formGroupExampleInput2">Example label2</label>
+                                        <input type="text" class="form-control" id="formGroupExampleInput2"
+                                            placeholder="Another input">
+                                    </div>
+                                </form>
+                            </li>
+                        </ul>
+                    </div>
+                    </br>
+                    <div class="card container-fluid" style="width: 38rem;">
+
+                        <div class="card container-fluid">
+                            <div class="card-header">
+                                Featured
+                            </div>
+                            <ul class="list-group list-group-flush">
+                                <li class="list-group-item"></li>
+                            </ul>
+                        </div>
+                        </br>
+                        <div class="container-fluid" style="width: 40rem;">
+                            <div class="footer">
+                                <p class="blacktext">
+                                    Made with lots of ❤️.
+                                </p>
+                            </div>
 
 </body>
 
@@ -92,6 +90,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
-<script src="script.js"></script>
+<script src="./assets/JS/app.js"></script>
 
 </html>
