--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         =======
         >>>>>>> 2468d5505d983d9dfdb75fac405aefc860597def
 
+
         <div class="card container-fluid">
             <div class="header">
 
@@ -38,23 +39,20 @@
                                 <form>
                                     <div class="form-group">
                                         <label for="formGroupExampleInput">Example label1</label>
-                                        <input type="text" class="form-control" id="formGroupExampleInput"
-                                            placeholder="Example input">
+                                        <input type="text" class="form-control" id="terms" placeholder="Example input">
                                     </div>
                                     <div class="form-group">
                                         <label for="formGroupExampleInput2">Example label2</label>
-                                        <input type="text" class="form-control" id="formGroupExampleInput2"
+                                        <input type="text" class="form-control" id="records"
                                             placeholder="Another input">
                                     </div>
                                     <div class="form-group">
                                         <label for="formGroupExampleInput2">Example label2</label>
-                                        <input type="text" class="form-control" id="formGroupExampleInput2"
-                                            placeholder="Another input">
+                                        <input type="text" class="form-control" id="startY" placeholder="Another input">
                                     </div>
                                     <div class="form-group">
                                         <label for="formGroupExampleInput2">Example label2</label>
-                                        <input type="text" class="form-control" id="formGroupExampleInput2"
-                                            placeholder="Another input">
+                                        <input type="text" class="form-control" id="endY" placeholder="Another input">
                                     </div>
                                 </form>
                             </li>
